--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-5.18MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.01MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇸🇬 新加坡-464.2KB/s(Youtube:不良林), server: 194.124.35.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇬🇧 英国-1.73MB/s(Youtube:不良林), server: 185.105.191.227, port: 443, type: vmess, uuid: 248c42c7-5328-46f6-8473-7a7e7c0b3c39, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /f1hUi8k, ws-headers: {Host: 185.105.191.227}}
-  - {name: 🇫🇷 法国-2.46MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-3.35MB/s(Youtube:不良林), server: 159.223.54.93, port: 80, type: vmess, uuid: d97ee737-7bc0-4dca-acf1-85135ed4d97e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.223.54.93}}
+  - {name: 🇯🇵 日本-319.2KB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-2.02MB/s(Youtube:不良林), server: doxjp.nbczl233.ml, port: 57447, type: trojan, password: 9431affb-7e63-4fa8-94fc-9f6ef852d4d4, sni: doxjp.nbczl233.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-258.3KB/s(Youtube:不良林), server: 194.124.35.42, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-273.5KB/s(Youtube:不良林), server: 194.124.35.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 塞浦路斯-357.0KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
   - {name: 🇺🇸 美国-5.38MB/s(Youtube:不良林), server: v20.emovpn.xyz, port: 1256, type: vmess, uuid: 00b3203c-0925-4bce-9fef-1a4794752a8d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v20.emovpn.xyz}}
-  - {name: 未知国家-366.9KB/s(Youtube:不良林), server: vfly4.win, port: 443, type: vmess, uuid: 424afb77-4724-4ddc-f4c0-35de9c2239f5, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly4.win}}
-  - {name: 未知国家-1.99MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
+  - {name: 🇺🇸 美国-366.9KB/s(Youtube:不良林), server: vfly4.win, port: 443, type: vmess, uuid: 424afb77-4724-4ddc-f4c0-35de9c2239f5, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly4.win}}
+  - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
   - {name: 🇺🇸 美国-2.51MB/s(Youtube:不良林), server: 150.230.43.106, port: 54829, type: vmess, uuid: f2b5c3ff-86c7-4efa-831f-ff0fcd7656a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林), server: 165.154.243.157, port: 48001, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-464.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.73MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-319.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-258.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-273.5KB/s(Youtube:不良林)
+      - 塞浦路斯-357.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 未知国家-366.9KB/s(Youtube:不良林)
-      - 未知国家-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-366.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-464.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.73MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-319.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-258.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-273.5KB/s(Youtube:不良林)
+      - 塞浦路斯-357.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 未知国家-366.9KB/s(Youtube:不良林)
-      - 未知国家-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-366.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-464.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.73MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-319.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-258.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-273.5KB/s(Youtube:不良林)
+      - 塞浦路斯-357.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 未知国家-366.9KB/s(Youtube:不良林)
-      - 未知国家-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-366.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-464.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.73MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-319.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-258.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-273.5KB/s(Youtube:不良林)
+      - 塞浦路斯-357.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 未知国家-366.9KB/s(Youtube:不良林)
-      - 未知国家-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-366.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-464.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.73MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-319.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-258.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-273.5KB/s(Youtube:不良林)
+      - 塞浦路斯-357.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 未知国家-366.9KB/s(Youtube:不良林)
-      - 未知国家-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-366.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-464.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.73MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-319.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-258.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-273.5KB/s(Youtube:不良林)
+      - 塞浦路斯-357.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 未知国家-366.9KB/s(Youtube:不良林)
-      - 未知国家-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-366.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-464.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.73MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-319.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-258.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-273.5KB/s(Youtube:不良林)
+      - 塞浦路斯-357.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 未知国家-366.9KB/s(Youtube:不良林)
-      - 未知国家-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-366.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
