--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-319.2KB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-2.02MB/s(Youtube:不良林), server: doxjp.nbczl233.ml, port: 57447, type: trojan, password: 9431affb-7e63-4fa8-94fc-9f6ef852d4d4, sni: doxjp.nbczl233.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-258.3KB/s(Youtube:不良林), server: 194.124.35.42, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-273.5KB/s(Youtube:不良林), server: 194.124.35.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 塞浦路斯-357.0KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
-  - {name: 🇺🇸 美国-5.38MB/s(Youtube:不良林), server: v20.emovpn.xyz, port: 1256, type: vmess, uuid: 00b3203c-0925-4bce-9fef-1a4794752a8d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v20.emovpn.xyz}}
-  - {name: 🇺🇸 美国-366.9KB/s(Youtube:不良林), server: vfly4.win, port: 443, type: vmess, uuid: 424afb77-4724-4ddc-f4c0-35de9c2239f5, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly4.win}}
-  - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
-  - {name: 🇺🇸 美国-2.51MB/s(Youtube:不良林), server: 150.230.43.106, port: 54829, type: vmess, uuid: f2b5c3ff-86c7-4efa-831f-ff0fcd7656a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林), server: 165.154.243.157, port: 48001, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-254.9KB/s(Youtube:不良林), server: 194.124.35.42, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-321.8KB/s(Youtube:不良林), server: 194.124.35.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 未知国家-1.73MB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
+  - {name: 🇸🇬 新加坡-393.4KB/s(Youtube:不良林), server: 194.124.35.42, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇰🇷 韩国-2.25MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇮🇹 意大利-374.0KB/s(Youtube:不良林), server: id-lb.sshkit.org, port: 443, type: vmess, uuid: 6fea1649-425b-4092-bf53-29792152c925, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /sshkit/hajjana/62bc48cd97ee1/, ws-headers: {Host: id-lb.sshkit.org}}
+  - {name: 🇺🇸 美国-2.12MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.83MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
+  - {name: 🇬🇧 英国-1.88MB/s(Youtube:不良林), server: vpnu.loungers.cc, port: 56830, type: vmess, uuid: d2e92a19-f50c-426e-cd15-03ece7f4f3b1, alterId: 32, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws/x-ui, ws-headers: {Host: vpnu.loungers.cc}}
+  - {name: 🇨🇳 台湾-4.48MB/s(Youtube:不良林), server: ntw01.vsvideo.live, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, sni: ntw01.vsvideo.live, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-319.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.02MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-258.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-273.5KB/s(Youtube:不良林)
-      - 塞浦路斯-357.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-366.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-254.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-321.8KB/s(Youtube:不良林)
+      - 未知国家-1.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-393.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.25MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-374.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.48MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-319.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.02MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-258.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-273.5KB/s(Youtube:不良林)
-      - 塞浦路斯-357.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-366.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-254.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-321.8KB/s(Youtube:不良林)
+      - 未知国家-1.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-393.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.25MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-374.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.48MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-319.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.02MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-258.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-273.5KB/s(Youtube:不良林)
-      - 塞浦路斯-357.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-366.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-254.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-321.8KB/s(Youtube:不良林)
+      - 未知国家-1.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-393.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.25MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-374.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.48MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-4.48MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-319.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.02MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-258.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-273.5KB/s(Youtube:不良林)
-      - 塞浦路斯-357.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-366.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-254.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-321.8KB/s(Youtube:不良林)
+      - 未知国家-1.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-393.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.25MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-374.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.48MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-319.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.02MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-258.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-273.5KB/s(Youtube:不良林)
-      - 塞浦路斯-357.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-366.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-254.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-321.8KB/s(Youtube:不良林)
+      - 未知国家-1.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-393.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.25MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-374.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.48MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-319.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.02MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-258.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-273.5KB/s(Youtube:不良林)
-      - 塞浦路斯-357.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-366.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-254.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-321.8KB/s(Youtube:不良林)
+      - 未知国家-1.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-393.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.25MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-374.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.48MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-319.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.02MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-258.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-273.5KB/s(Youtube:不良林)
-      - 塞浦路斯-357.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-366.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-254.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-321.8KB/s(Youtube:不良林)
+      - 未知国家-1.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-393.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.25MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-374.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.48MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
