--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-2.30MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-2.51MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.45MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-258.3KB/s(Youtube:不良林), server: 194.124.35.42, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林), server: 165.154.243.157, port: 48001, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-4.48MB/s(Youtube:不良林), server: ntw01.vsvideo.live, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, sni: ntw01.vsvideo.live, skip-cert-verify: true}
-  - {name: 🇨🇭 瑞士-351.2KB/s(Youtube:不良林), server: ch1.nodegz.top, port: 1400, type: trojan, password: 8087b6af-8b74-3097-9ec6-f688da88073e, sni: ch1.nodegz.top, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.08MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇸🇬 新加坡-912.9KB/s(Youtube:不良林), server: doxjp.nbczl233.ml, port: 57447, type: trojan, password: 9431affb-7e63-4fa8-94fc-9f6ef852d4d4, sni: doxjp.nbczl233.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.58MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
   - {name: 🇺🇸 美国-1.91MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-1.08MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇭 瑞士-351.2KB/s(Youtube:不良林), server: ch1.nodegz.top, port: 1400, type: trojan, password: 8087b6af-8b74-3097-9ec6-f688da88073e, sni: ch1.nodegz.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.90MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-403.4KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.26MB/s(Youtube:不良林), server: 165.154.243.157, port: 48002, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-923.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇦🇺 澳大利亚-1.83MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-328.4KB/s(Youtube:不良林), server: usa1.mayiyun.shop, port: 20012, type: ss, cipher: aes-256-gcm, password: 9be8090d-bbdc-4e75-90da-044f04dd9c31}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-258.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.48MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-351.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-912.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-351.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-403.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.26MB/s(Youtube:不良林)
+      - 🇫🇷 法国-923.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-258.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.48MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-351.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-912.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-351.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-403.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.26MB/s(Youtube:不良林)
+      - 🇫🇷 法国-923.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-258.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.48MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-351.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-912.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-351.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-403.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.26MB/s(Youtube:不良林)
+      - 🇫🇷 法国-923.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-4.48MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-258.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.48MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-351.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-912.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-351.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-403.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.26MB/s(Youtube:不良林)
+      - 🇫🇷 法国-923.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-258.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.48MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-351.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-912.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-351.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-403.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.26MB/s(Youtube:不良林)
+      - 🇫🇷 法国-923.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-258.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.48MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-351.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-912.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-351.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-403.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.26MB/s(Youtube:不良林)
+      - 🇫🇷 法国-923.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-258.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.48MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-351.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-912.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-351.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-403.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.26MB/s(Youtube:不良林)
+      - 🇫🇷 法国-923.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
